# pc-ble-driver-py

./: .tox_find_wheel.py  .tox_find_wheel_fallback.py  BUILDING_WHEELS.md  BUILD_ENVIRONMENT_COMPARISON.md  BUILD_ENVIRONMENT_STANDARDIZATION.md  BUILD_INTEL_WHEEL.sh  BUILD_STATUS.md  CMakeLists.txt  COMPLETE_SETUP.md  FIX_SEGFAULT_ISSUE.md  FIX_UNIVERSAL2_WHEEL.md  INSTALL.md  README.md  TESTING_WHEELS.md  TEST_FIXES_SUMMARY.md  TEST_RELEASE.md  WHEEL_SEGFAULT_ANALYSIS.md  add_arm64_to_release.sh  build_all_wheels.sh  build_all_wheels_simple.sh  build_universal2_wheels.sh  build_wheels.sh  bundle_dependencies.sh  bundle_dependencies_complete.sh  bundle_into_wheel.py  check_build_requirements.sh  compare_build_environments.sh  create_release.sh  create_universal2_wheel.sh  download_and_test_release_wheels.sh  example_usage.py  fix_all_release_wheels.sh  fix_rpath_post_build.sh  fix_wheel_python_linking.sh  fix_wheel_python_version.py  fix_wheel_rpath.sh  fix_wheel_rpath_complete.sh  install.sh  install_pc_ble_driver_py.sh  list_release_wheels.py  (+20 more)
.github/workflows/: build-wheels.yml  release.yml  test-workflow-dispatch.yml
pc_ble_driver_py/: __init__.py
pc_ble_driver_py/lib/: __init__.py
swig/: pc_ble_driver.i.in
test_release_venv_3.12/: pyvenv.cfg
test_wheel_env/: pyvenv.cfg
test_wheel_venv/: pyvenv.cfg
tests/: run_hw_test_if_available.py  test_cmake_rpath_config.py  test_driver_open_close.py  test_pc_ble_driver_py.py  test_wheel_compatibility.py
tools/: patch_skbuild_constants.py
